src/lang.js
import { Union, GroupBy, Join, Paren, Source, PClause, Expr, Value, Attr, Func, Where } from "./query.js"
import * as R from "ramda"
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(q) { return q; },
      peg$c1 = function(g, f, w) { 
          let ops = R.reject(R.isNil, [g, w, f]);
          R.reduce((acc, op) => {
            acc.c = op;
            return op;
          }, ops[0], R.tail(ops))

          return g;
        },
      peg$c2 = function(terms) { return GroupBy(GroupBy.termsToAgbFs(terms)); },
      peg$c3 = function(n) { return Source({source: n, alias: n}); },
      peg$c4 = ",",
      peg$c5 = peg$literalExpectation(",", false),
      peg$c6 = function(head, tail) { return Where({ exprs: flatten(head, tail, 3) }) },
      peg$c7 = function(head, tail) { return flatten(head, tail, 3); },
      peg$c8 = function(e, a) { 
          if (!a) {
            if (e.classType == "Attr") 
              a = e.attr;
            else if (e.classType == "Func")
              a = "y"
            else
              throw Error(`PClause missing alias: ${e.classType}, ${e.type}, ${e.toSql()}`)
          } else {
            a = a[2]
          }
          return PClause({e, alias:a}) 
        },
      peg$c9 = function(head, tail) {
          let l = head;
          if (!tail) return l;
          return Expr({ op: tail[1], l, r:tail[3] });
        },
      peg$c10 = function(t, c) { return Attr({ table: t, attr: c }); },
      peg$c11 = function(c) { return Attr({ attr: c})},
      peg$c12 = function(x) { return Value(x) },
      peg$c13 = function(e) { return Paren({expr:e}); },
      peg$c14 = function(n, fargs) { 
          fargs = fargs || [];
          return Func({fname:n, args:fargs})
        },
      peg$c15 = function(head, tail) { return flatten(head, tail, 3) },
      peg$c16 = function(s) { 
        return s;
        },
      peg$c17 = function(digits) { 
          var x = flatstr(digits);
          if (x.indexOf('.') >= 0) {
            return { type: "Number", value: parseFloat(x)};
          }
          return { type: "Number", value :parseInt(x) };
        },
      peg$c18 = "-",
      peg$c19 = peg$literalExpectation("-", false),
      peg$c20 = "+",
      peg$c21 = peg$literalExpectation("+", false),
      peg$c22 = "~",
      peg$c23 = peg$literalExpectation("~", false),
      peg$c24 = "NOT",
      peg$c25 = peg$literalExpectation("NOT", false),
      peg$c26 = function(x) { return x[1] },
      peg$c27 = "||",
      peg$c28 = peg$literalExpectation("||", false),
      peg$c29 = "*",
      peg$c30 = peg$literalExpectation("*", false),
      peg$c31 = "/",
      peg$c32 = peg$literalExpectation("/", false),
      peg$c33 = "%",
      peg$c34 = peg$literalExpectation("%", false),
      peg$c35 = "<<",
      peg$c36 = peg$literalExpectation("<<", false),
      peg$c37 = ">>",
      peg$c38 = peg$literalExpectation(">>", false),
      peg$c39 = "&",
      peg$c40 = peg$literalExpectation("&", false),
      peg$c41 = "<=",
      peg$c42 = peg$literalExpectation("<=", false),
      peg$c43 = ">=",
      peg$c44 = peg$literalExpectation(">=", false),
      peg$c45 = "<",
      peg$c46 = peg$literalExpectation("<", false),
      peg$c47 = ">",
      peg$c48 = peg$literalExpectation(">", false),
      peg$c49 = "=",
      peg$c50 = peg$literalExpectation("=", false),
      peg$c51 = "==",
      peg$c52 = peg$literalExpectation("==", false),
      peg$c53 = "!=",
      peg$c54 = peg$literalExpectation("!=", false),
      peg$c55 = "<>",
      peg$c56 = peg$literalExpectation("<>", false),
      peg$c57 = "OR",
      peg$c58 = peg$literalExpectation("OR", false),
      peg$c59 = "or",
      peg$c60 = peg$literalExpectation("or", false),
      peg$c61 = "AND",
      peg$c62 = peg$literalExpectation("AND", false),
      peg$c63 = "and",
      peg$c64 = peg$literalExpectation("and", false),
      peg$c65 = "true",
      peg$c66 = peg$literalExpectation("true", false),
      peg$c67 = "false",
      peg$c68 = peg$literalExpectation("false", false),
      peg$c69 = /^[A-Za-z0-9_]/,
      peg$c70 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false),
      peg$c71 = function(str) { return str.join('') },
      peg$c72 = "as",
      peg$c73 = peg$literalExpectation("as", true),
      peg$c74 = "select",
      peg$c75 = peg$literalExpectation("select", true),
      peg$c76 = "from",
      peg$c77 = peg$literalExpectation("FROM", true),
      peg$c78 = "where",
      peg$c79 = peg$literalExpectation("WHERE", true),
      peg$c80 = /^[ \t\n\r]/,
      peg$c81 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c82 = /^[0-9]/,
      peg$c83 = peg$classExpectation([["0", "9"]], false, false),
      peg$c84 = ".",
      peg$c85 = peg$literalExpectation(".", false),
      peg$c86 = ";",
      peg$c87 = peg$literalExpectation(";", false),
      peg$c88 = "--",
      peg$c89 = peg$literalExpectation("--", false),
      peg$c90 = "(",
      peg$c91 = peg$literalExpectation("(", false),
      peg$c92 = ")",
      peg$c93 = peg$literalExpectation(")", false),
      peg$c94 = "\n",
      peg$c95 = peg$literalExpectation("\n", false),
      peg$c96 = peg$otherExpectation("string"),
      peg$c97 = "\"",
      peg$c98 = peg$literalExpectation("\"", false),
      peg$c99 = function(chars) {
            return { type: "Literal", value: chars.join("") };
          },
      peg$c100 = "'",
      peg$c101 = peg$literalExpectation("'", false),
      peg$c102 = "\\",
      peg$c103 = peg$literalExpectation("\\", false),
      peg$c104 = function() { return text(); },
      peg$c105 = function(sequence) { return sequence; },
      peg$c106 = function() { return ""; },
      peg$c107 = "0",
      peg$c108 = peg$literalExpectation("0", false),
      peg$c109 = function() { return "\0"; },
      peg$c110 = /^[\n\r\u2028\u2029]/,
      peg$c111 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false),
      peg$c112 = peg$anyExpectation(),
      peg$c113 = "b",
      peg$c114 = peg$literalExpectation("b", false),
      peg$c115 = function() { return "\b";   },
      peg$c116 = "f",
      peg$c117 = peg$literalExpectation("f", false),
      peg$c118 = function() { return "\f";   },
      peg$c119 = "n",
      peg$c120 = peg$literalExpectation("n", false),
      peg$c121 = function() { return "\n";   },
      peg$c122 = "r",
      peg$c123 = peg$literalExpectation("r", false),
      peg$c124 = function() { return "\r";   },
      peg$c125 = "t",
      peg$c126 = peg$literalExpectation("t", false),
      peg$c127 = function() { return "\t";   },
      peg$c128 = "v",
      peg$c129 = peg$literalExpectation("v", false),
      peg$c130 = function() { return "\x0B"; },
      peg$c131 = peg$otherExpectation("end of line"),
      peg$c132 = "\r\n",
      peg$c133 = peg$literalExpectation("\r\n", false),
      peg$c134 = "\r",
      peg$c135 = peg$literalExpectation("\r", false),
      peg$c136 = "\u2028",
      peg$c137 = peg$literalExpectation("\u2028", false),
      peg$c138 = "\u2029",
      peg$c139 = peg$literalExpectation("\u2029", false),
      peg$c140 = "x",
      peg$c141 = peg$literalExpectation("x", false),
      peg$c142 = "u",
      peg$c143 = peg$literalExpectation("u", false),
      peg$c144 = function(digits) {
            return String.fromCharCode(parseInt(digits, 16));
          },
      peg$c145 = /^[0-9a-f]/i,
      peg$c146 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parsequery();
    if (s0 === peg$FAILED) {
      s0 = peg$parseexpr();
    }

    return s0;
  }

  function peg$parsequery() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsews();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseQ();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseQ() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsegroupby();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsefrom();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsewhere();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1, s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsegroupby() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseSELECT();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsegbterms();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsefrom() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseFROM();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsewsp();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsename();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsewhere() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parseWHERE();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsewsp();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseexpr();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$currPos;
          s6 = peg$parsews();
          if (s6 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 44) {
              s7 = peg$c4;
              peg$currPos++;
            } else {
              s7 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c5); }
            }
            if (s7 !== peg$FAILED) {
              s8 = peg$parsews();
              if (s8 !== peg$FAILED) {
                s9 = peg$parseexpr();
                if (s9 !== peg$FAILED) {
                  s6 = [s6, s7, s8, s9];
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$currPos;
            s6 = peg$parsews();
            if (s6 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 44) {
                s7 = peg$c4;
                peg$currPos++;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c5); }
              }
              if (s7 !== peg$FAILED) {
                s8 = peg$parsews();
                if (s8 !== peg$FAILED) {
                  s9 = peg$parseexpr();
                  if (s9 !== peg$FAILED) {
                    s6 = [s6, s7, s8, s9];
                    s5 = s6;
                  } else {
                    peg$currPos = s5;
                    s5 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c6(s3, s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsegbterms() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parsewsp();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsepclause();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parsews();
        if (s5 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 44) {
            s6 = peg$c4;
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s6 !== peg$FAILED) {
            s7 = peg$parsews();
            if (s7 !== peg$FAILED) {
              s8 = peg$parsepclause();
              if (s8 !== peg$FAILED) {
                s5 = [s5, s6, s7, s8];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = peg$parsews();
          if (s5 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 44) {
              s6 = peg$c4;
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c5); }
            }
            if (s6 !== peg$FAILED) {
              s7 = peg$parsews();
              if (s7 !== peg$FAILED) {
                s8 = peg$parsepclause();
                if (s8 !== peg$FAILED) {
                  s5 = [s5, s6, s7, s8];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c7(s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsepclause() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseexpr();
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = peg$parseAS();
      if (s3 !== peg$FAILED) {
        s4 = peg$parsewsp();
        if (s4 !== peg$FAILED) {
          s5 = peg$parsename();
          if (s5 !== peg$FAILED) {
            s3 = [s3, s4, s5];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c8(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseexpr() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parsevalue();
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = peg$parsews();
      if (s3 !== peg$FAILED) {
        s4 = peg$parsebinary_operator();
        if (s4 !== peg$FAILED) {
          s5 = peg$parsews();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseexpr();
            if (s6 !== peg$FAILED) {
              s3 = [s3, s4, s5, s6];
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c9(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsevalue() {
    var s0, s1, s2, s3;

    s0 = peg$parsefcall();
    if (s0 === peg$FAILED) {
      s0 = peg$parseliteral_value();
      if (s0 === peg$FAILED) {
        s0 = peg$parseparen_value();
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsename();
          if (s1 !== peg$FAILED) {
            s2 = peg$parsedot();
            if (s2 !== peg$FAILED) {
              s3 = peg$parsename();
              if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c10(s1, s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parsename();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c11(s1);
            }
            s0 = s1;
          }
        }
      }
    }

    return s0;
  }

  function peg$parseliteral_value() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsenumeric_literal();
    if (s1 === peg$FAILED) {
      s1 = peg$parsestring_literal();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c12(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseparen_value() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parselparen();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsews();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseexpr();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsews();
          if (s4 !== peg$FAILED) {
            s5 = peg$parserparen();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c13(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsefcall() {
    var s0, s1, s2, s3, s4, s5, s6;
